@@ -282,6 +282,10 @@ plugin.tx_seminars_pi1 {
 	# whether canceled events should be hidden or not
 	hideCanceledEvents = 0
 
+	# comma-separated list of event types UIDs to filter the list view for,
+	# leave empty to have no such filter
+	limitListViewToEventTypes =
+
 	# comma-separated list of category UIDs to filter the list view for, leave
 	# empty to have no such filter
 	limitListViewToCategories =
